--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "src": "package.json",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -14,5 +11,8 @@
       "src": "/(.*)",
       "dest": "index.html"
     }
-  ]
+  ],
+  "env": {
+    "NODE_VERSION": "20"
+  }
 }
